# arrowhead

./: .env.example  .gitignore  Cargo.toml  README.md  install.ps1  install.sh  test_debug.rs
.github/workflows/: release.yml
docs/: _redirects  index.html  install.html  mcp_client_guide.md  mcp_tool_development_guide.md  windows.html
docs/examples/: advanced_features.rs  basic_usage.rs  tool_integration.rs
examples/: debug_interactive.rs  test_gemini.rs  test_no_mock.rs
src/: ai_conversation.rs  calendar_adapter.rs  chat.rs  cli.rs  config.rs  context_manager.rs  conversational_interface.rs  gemini_client.rs  goals.rs  intelligent_help.rs  jira_adapter.rs  lib.rs  main.rs  mcp_api.rs  mcp_client.rs  nl_cli_bridge.rs  nl_command_parser.rs  notes.rs  obsidian_adapter.rs  openai_client.rs  proactive_assistance.rs  router.rs  todos.rs  tool_orchestrator.rs  user_learning.rs  utils.rs  workflow_engine.rs  workflow_integrations.rs  workflow_monitoring.rs  workflow_templates.rs  workflow_ui.rs
