[package]
name = "arrowhead"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
anyhow = "1.0.79"
thiserror = "1.0.56"
async-trait = "0.1.74"
uuid = { version = "1.6.1", features = ["v4"] }
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3.30"
urlencoding = "2.1.3"
base64 = "0.21.7"
log = "0.4.20"
# Vector operations and embeddings
nalgebra = "0.32"
bincode = "1.3"
rayon = "1.8"
