[package]
name = "arrowhead"
version = "0.1.0"
edition = "2021"
authors = ["Jai Dhiman <jai.dhiman@example.com>"]
description = "AI-powered productivity assistant with intelligent task management, workflow automation, and natural language processing"
readme = "README.md"
homepage = "https://github.com/Jai-Dhiman/arrowhead"
repository = "https://github.com/Jai-Dhiman/arrowhead"
license = "MIT"
keywords = ["ai", "productivity", "workflow", "automation", "cli"]
categories = ["command-line-utilities", "text-processing"]
exclude = [
    "target/",
    "data/",
    ".github/",
    "docs/",
    "examples/",
    "test_debug.rs"
]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "arrowhead"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.23", features = ["json", "stream"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
anyhow = "1.0.79"
thiserror = "1.0.56"
async-trait = "0.1.74"
uuid = { version = "1.6.1", features = ["v4"] }
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3.30"
urlencoding = "2.1.3"
base64 = "0.21.7"
log = "0.4.20"
# Vector operations and embeddings
nalgebra = "0.32"
bincode = "1.3"
rayon = "1.8"
# Environment variable support for API keys
dotenv = "0.15"
# Configuration file support
toml = "0.8"
dirs = "5.0"

[[example]]
name = "test_gemini"
path = "examples/test_gemini.rs"
